# pipeee-simulator

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
evaluate/: run1.py
src/pipeee/: buffer.py  confidence_updater.py  config.py  engine.py  executor.py  llm.py  logger.py  modeling_io.py  request.py  request_queue.py  request_trie.py
src/pipeee/sched/: scheduler.py  scheduler_budget.py  spec_cache.py  utils.py
src/pipeee/utils/: counter.py  id_pool.py  sample.py
src/pipeee/worker/: model_runner.py  worker.py
src/pipeee/worker/models/: modeling_llama.py
